@@ -9,7 +9,7 @@ Build-Depends:
 #sid stretch jessie wheezy saucy sid-oracle trusty utopic vivid# debhelper (>= 9),
 #precise# debhelper (>= 7),
  flex,
- grass-dev (<< 7),
+ grass-dev,
  libexpat1-dev,
  libfcgi-dev,
 #sid stretch jessie sid-oracle trusty utopic vivid# libgdal-dev (>= 1.10.1-0~),
@@ -23,8 +23,8 @@ Build-Depends:
  libqt4-dev (>= 4.7.0),
  libqt4-opengl-dev,
  libqtwebkit-dev,
-#sid stretch jessie wheezy sid-oracle# libqwt-dev,
-#precise saucy trusty utopic vivid# libqwt5-qt4-dev,
+#stretch jessie wheezy sid-oracle# libqwt-dev,
+#precise saucy trusty utopic vivid sid# libqwt5-qt4-dev,
  libspatialite-dev,
  libsqlite3-dev,
  libspatialindex-dev,
@@ -273,7 +273,7 @@ Depends:
  qgis-plugin-grass-common (= ${source:Version}),
  ${shlibs:Depends},
  ${misc:Depends},
-#!precise# grass-core (<< 7)
+#!precise# grass-core
 #precise# grass (<< 7)
 Description: GRASS plugin for QGIS
  QGIS is a Geographic Information System (GIS) which manages, analyzes and
