@@ -47,13 +47,11 @@ CMAKE_OPTS := \
 	-DBUILDNAME=$(DEB_BUILD_NAME) \
 	-DCMAKE_VERBOSE_MAKEFILE=1 \
 	-DCMAKE_INSTALL_PREFIX=/usr \
-	-DGRASS_PREFIX=/usr/lib/$(GRASS) \
 	-DBINDINGS_GLOBAL_INSTALL=TRUE \
 	-DPEDANTIC=TRUE \
 	-DWITH_QSPATIALITE=TRUE \
 	-DWITH_SERVER=TRUE \
 	-DWITH_SERVER_PLUGINS=TRUE \
-	-DWITH_GRASS7=FALSE \
 	-DSERVER_SKIP_ECW=TRUE \
 	-DQGIS_CGIBIN_SUBDIR=/usr/lib/cgi-bin \
 	-DWITH_APIDOC=TRUE \
@@ -105,6 +103,18 @@ ifneq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
 	CMAKE_OPTS += -DENABLE_TESTS=FALSE
 else
 	CMAKE_OPTS += -DENABLE_TESTS=TRUE
+endif
+
+ifeq ($(GRASSVER),7)
+	CMAKE_OPTS += \
+		-DWITH_GRASS=FALSE \
+		-DWITH_GRASS7=TRUE \
+		-DGRASS_PREFIX7=/usr/lib/$(GRASS)
+else
+	CMAKE_OPTS += \
+		-DWITH_GRASS=TRUE \
+		-DWITH_GRASS7=FALSE \
+		-DGRASS_PREFIX=/usr/lib/$(GRASS)
 endif
 
 ifneq (,$(findstring $(DISTRIBUTION),"wheezy jessie stretch trusty sid sid-oracle"))
