@@ -2,8 +2,9 @@ qgis (2.11.0) UNRELEASED; urgency=medium
 
   * New development version 2.11 after branch of 2.10
   * moved grass default.qgc from config to modules
+  * include grass7 plugin
 
- -- Jürgen E. Fischer <jef@norbit.de>  Fri, 24 Jul 2015 08:37:55 +0200
+ -- Jürgen E. Fischer <jef@norbit.de>  Tue, 25 Aug 2015 00:14:25 +0200
 
 qgis (2.10.0) unstable; urgency=medium
 
